fix header team align

--- a/src/app/game/components/position-header/position-header.css
+++ b/src/app/game/components/position-header/position-header.css
@@ -15,6 +15,7 @@
 .col-team {
     flex-grow: 1;
     text-align: left;
+    padding-left: 28px;
 }
 
 .col-stat {
